# silex

./: .dockerignore  .gitignore  ARCHITECTURE.md  BADFD  COMPATIBILITY.md  CONTRIBUTING.md  COVERAGE.md  EXTERNAL_TEST_SCORECARD.md  LICENSE  Makefile  OPTIMISATIONS.md  PROMPT.md  README.md  SECURITY.md  STATUS.md  arena.c.gcov  avx2intrin.h.gcov  avxintrin.h.gcov  basename.c.gcov  build-cache.sh  cat.c.gcov  charclass.h.gcov  charclass_re.c.gcov  check.sh  chmod.c.gcov  classify.c.gcov  compile.c.gcov  cp.c.gcov  cut.c.gcov  date.c.gcov  detect.c.gcov  dirname.c.gcov  echo.c.gcov  env.c.gcov  error.c.gcov  exec.c.gcov  expand.c.gcov  fallback.c.gcov  fcntl2.h.gcov  find.c.gcov  (+53 more)
.githooks/: commit-msg
.github/: dependabot.yml  renovate.json
benchmarks/: benchmark.sh  coreutils-allocator-2026-03-24.txt  generate.sh  index.html
benchmarks/projects/cpp-json-parser/: CMakeLists.txt
benchmarks/projects/cpp-json-parser/examples/: main.cpp
benchmarks/projects/cpp-json-parser/include/: json_tokenizer.h  json_value.h
benchmarks/projects/cpp-json-parser/src/: json_value.cpp
config/: package-mapping.json
core/: EXTERNAL_TEST_SCORECARD.md  EXTERNAL_TEST_TRIAGE.md  Makefile  README.md
dockerfiles/: Dockerfile  Dockerfile.bootstrap  Dockerfile.cross  Dockerfile.dev  Dockerfile.runtime  Dockerfile.slim
docs/: ARCHITECTURE.md  COMPATIBILITY.md  FLAG_GAPS.md  HOST-RECOMMENDATIONS.md  LICENSING.md  PIPE_ELIMINATION.md  SECURITY.md  STATUS.md  TAR_FEASIBILITY.md  TROUBLESHOOTING.md  UNIKERNEL.md
modules/: cp_reflink.c  grep_pcre.c  sed_inplace.c
scripts/: apt-shim  (+5 more)
(+358 files in other folders)
